# compila-project

./: .gitignore  CMakeLists.txt  README.md  codegen.cpp  codegen.h  environment.h  eval_visitor.cpp  eval_visitor.h  example.txt  example1.s  example2.txt  example3.s  example3.txt  example4.txt  example5.txt  exampleARR.txt  exp.cpp  exp.h  imp_value.cpp  imp_value.h  main  main.cpp  parser.cpp  parser.h  prueba.txt  scanner.cpp  scanner.h  token.cpp  token.h  type_visitor.cpp  type_visitor.h  visitor.cpp  visitor.h
TS/: environment.h  exp.cpp  exp.h  main.cpp  parser.cpp  parser.h  visitor.cpp
test/array/: ex1_arr.s  ex1_arr.txt  ex2_arr.s  ex2_arr.txt  ex3_arr.s  ex3_arr.txt  ex4_arr.s  ex4_arr.txt  ex5_arr.s  ex5_arr.txt
test/cond_stm/: ex1_cond.s  ex1_cond.txt  ex2_cond.s  ex2_cond.txt  ex3_cond.s  ex3_cond.txt  ex4_cond.s  ex4_cond.txt  ex5_cond.s  ex5_cond.txt  ex6_cond.s  ex6_cond.txt
test/exp/: ex1_exp.s  ex1_exp.txt  ex2_exp.s  ex2_exp.txt  ex3_exp.s  ex3_exp.txt
test/func/: ex1_func.s  ex1_func.txt  ex2_func.s  ex2_func.txt  ex3_func.s  ex3_func.txt
test/strings/: strings1.s  strings1.txt  strings2.s  strings2.txt  strings3.s  strings3.txt  strings4.s  strings4.txt  strings5.s  strings5.txt
test/var_decl/: ex1_var_d.s  ex1_var_d.txt  ex2_var_d.s  ex2_var_d.txt  ex3_var_d.s  ex3_var_d.txt
